# bechmlup

./: CHANGELOG.md  bechmlup.cabal  install.sh
.github/workflows/: release.yml
app/: Main.hs
src/: Bechmlup.hs
