cabal-version:   3.0
name:            bechmlup
version:         0.1.0
synopsis:        Installer for bechml and roux
license:         (MIT OR Apache-2.0)
maintainer:      matt@hunzinger.me
author:          Matt Hunzinger
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:  Bechmlup
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.3.0,
        aeson >=2.1 && <2.3,
        bytestring >=0.11 && <0.13,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.6,
        http-client >=0.7 && <0.8,
        http-client-tls >=0.3 && <0.4,
        http-types >=0.12 && <0.13,
        process >=1.6 && <1.7,
        text >=2.0 && <2.2,
        optparse-applicative >=0.17 && <0.19

executable bechmlup
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.3.0,
        bechmlup,
        optparse-applicative >=0.17 && <0.21

test-suite bechmlup-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.3.0,
        bechmlup
